--- a/Sally-Resume/Resume.html
+++ b/Sally-Resume/Resume.html
@@ -24,7 +24,7 @@
     <section>
         <h2>Education</h2>
         <h4>Hogwarts school of Witchcraft and Wizardry</h4>
-         <p>Diploma in Wizardry</p>
+         <p>Bachelors in Wizardry</p>
     </section>
     <section>
         <h2>Employment History</h2>
